tests/algorithms/x/Java/graphs/frequent_pattern_graph_miner.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden426_frequent_pattern_graph_miner232390408/001/Main.java:113: error: cannot find symbol
                if (String.valueOf(toi(((String)(((java.util.Map)table[j])).get("count")))).compareTo(String.valueOf(toi(((String)(((java.util.Map)table[max_i])).get("count"))))) > 0) {
                                   ^
  symbol:   method toi(String)
  location: class Main
/tmp/TestJavaTranspiler_Algorithms_Golden426_frequent_pattern_graph_miner232390408/001/Main.java:113: error: cannot find symbol
                if (String.valueOf(toi(((String)(((java.util.Map)table[j])).get("count")))).compareTo(String.valueOf(toi(((String)(((java.util.Map)table[max_i])).get("count"))))) > 0) {
                                                                                                                     ^
  symbol:   method toi(String)
  location: class Main
Note: /tmp/TestJavaTranspiler_Algorithms_Golden426_frequent_pattern_graph_miner232390408/001/Main.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
